Minor Detail Changes
Removed unnecassary files and changed a couple of names to match being only a framework.

--- a/view/includes/footer.html
+++ b/view/includes/footer.html
@@ -1,7 +1,7 @@
 <div class = "row footer">
     <div class="col-sm footerLeft">
       <h4>Contact Us:</h4>
-      <p>support@gofind.com</p>
+      <p>support@framework.com</p>
       <p>(+44)0845 6253679</p>
       <br />
       <p>Website by Thomas Whittington.</p>
@@ -16,8 +16,6 @@
     </div>
     <div class="col-sm footerRight">
       <h4>Powered by:</h4>
-      <h5>Nestoria</h5>
-      <h5>Zoopla</h5>
       <h5>Bootstrap</h5>
       <h5>Font Awesome</h5>
     </div>
