--- a/view/includes/header.html
+++ b/view/includes/header.html
@@ -1,6 +1,6 @@
 <div class = "row header">
   <div class = "col headerLeft">
-    <h1>Go Find</h1>
+    <h1>Framework</h1>
   </div>
   <!--
   <nav class="navbar navbar-toggleable-md navbar-dark bg-faded headerRight">
